--- a/resume.html
+++ b/resume.html
@@ -46,9 +46,9 @@
        <div class="container col-xxl-8 px-4 py-5">
 		<div class="row flex-lg-row-reverse align-items-center g-5 py-5">
 		  <div class="col-12">
-        <button class="btn btn-lg btn-danger" onclick="window.open('resume.pdf', '_blank', 'noopener noreferrer')"> Open PDF version</button>
+        <button class="btn btn-lg btn-danger" onclick="window.open('Resume24.pdf', '_blank', 'noopener noreferrer')"> Open PDF version</button>
        </div>
-			<img src="links/resume.png" class="d-block mx-lg-auto img-fluid" alt="Resume" width="300" height="200" loading="lazy">
+			<img src="links/Resume24.png" class="d-block mx-lg-auto img-fluid" alt="Resume" width="300" height="200" loading="lazy">
 		  </div>
 		  
 			</div>
