--- a/contact.html
+++ b/contact.html
@@ -75,11 +75,15 @@
 
           <div class="col-md-4"> 
             <a class="btn btn-light" target="_blank"
-            href="www.linkedin.com/in/sarah-lockard-a5a632264">
+            href="https://www.linkedin.com/in/sarah-lockard-a5a632264/">
               <img src="links/3.svg" alt="Image" class="btn-img">
               <span class="btn-text">Connect with me!</span>
           </a>
-            
+          
+
+
+
+
 
 
           </div> <!-- end col-md-4-->
