--- a/cybersolutions.html
+++ b/cybersolutions.html
@@ -36,7 +36,7 @@
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
               <div class="col-10 col-sm-8 col-lg-6">
                 <div class="image-container">
-                    <img src="links/madcomp.png" class="card-img-top image" alt=".computer screen" width="700" height="500">
+                    <img src="links/madcomp.png" class="card-img-top image" alt=".computer screen">
                     <a href="https://cewhite3.github.io/BobThompson/index.html" target="_blank" class="btn btn-lg btn-primary hover-button">Live Site</a>
                   </div>
                
