--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,8 @@
     <title>Sarah Lockard · Portfolio</title>
 
     <!-- LOAD BOOTSTRAP CSS - DO NOT DELETE -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- END LOADING BOOTSTRAP CSS -->
 
@@ -91,7 +92,7 @@
         </div> <!-- End row-->
       </div>  <!-- End container-->
 
-
+    
 
    
    </body>
